<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="50dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tvId"
        app:layout_constraintStart_toEndOf="@id/tvId"
        app:layout_constraintTop_toTopOf="@id/tvId" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvId" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:text="@string/complexity"
        android:id="@+id/tvComplexity"
        android:textSize="30sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/tvDuration"
        app:layout_constraintTop_toTopOf="@id/tvDuration"
        app:layout_constraintBottom_toBottomOf="@id/tvDuration"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPrice"
        android:text="@string/price"
        android:textColor="@color/teal_700"
        app:layout_constraintTop_toBottomOf="@id/tvDuration"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/orange"
        android:layout_height="wrap_content"
        android:id="@+id/tvGuide"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:text="@string/guide"
        app:layout_constraintStart_toEndOf="@id/tvPrice"
        app:layout_constraintTop_toTopOf="@id/tvPrice"
        app:layout_constraintBottom_toBottomOf="@id/tvPrice"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCategory"
        android:text="@string/category"
        android:textColor="@color/pink"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvPrice"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region"
        android:id="@+id/tvRegion"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/tvCategory"
        app:layout_constraintTop_toTopOf="@id/tvCategory"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDeparture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        android:textSize="26sp"
        android:text="@string/departure"
        android:textColor="@color/purple_500"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvArrival"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        android:textSize="26sp"
        android:text="@string/arrival"
        android:textColor="@color/purple_500"/>

</androidx.constraintlayout.widget.ConstraintLayout>